added logic to set first player and fill cells alternating by player

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         Tic Tac Toe -- the game
     </div>
     <div id="mainContainer">
+        <div id = "xFirst" class="setFirstPlayerBTN">set first player X</div>
+        <div id = "oFirst" class="setFirstPlayerBTN">set first player O</div>
+        <div id="fillCellBTN">play random cell</div>
         <div id="gameWindow">
         </div>
     </div>
